--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Všeobecná poznámka</string>
     <string name="create_new_note">Vytvoriť novú poznámku</string>
     <string name="add_to_note">Pridať k poznámke</string>
+    <string name="unsaved_changes_warning">Máte nejaké neuložené zmeny. Čo s nimi chcete spraviť?</string>
 
     <!-- File notes -->
     <string name="open_file">Otvoriť súbor</string>
