--- a/app/src/main/res/values-az/strings.xml
+++ b/app/src/main/res/values-az/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Ümumi qeyd</string>
     <string name="create_new_note">Yeni qeyd yarat</string>
     <string name="add_to_note">Qeydə əlavə et</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Faylı Aç</string>
