--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Hauptnotiz</string>
     <string name="create_new_note">Neue Notiz erstellen</string>
     <string name="add_to_note">Zu Notiz hinzufügen</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Datei öffnen</string>
