--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Nota principal</string>
     <string name="create_new_note">Crear una nota nueva</string>
     <string name="add_to_note">Añadir a la nota</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Abrir archivo</string>
