--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -17,6 +17,7 @@
     <string name="general_note">nota Xeral</string>
     <string name="create_new_note">Crear unha nova nota</string>
     <string name="add_to_note">Engadir a nota</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Abrir ficheiro</string>
