--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Opća bilješka</string>
     <string name="create_new_note">Stvori novu bilješku</string>
     <string name="add_to_note">Dodaj u bilješku</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Otvori datoteku</string>
