--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Pagrindinis įrašas</string>
     <string name="create_new_note">Kurti naują įrašą</string>
     <string name="add_to_note">Papildyti įrašą</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Atverti failą</string>
