--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Algemeen</string>
     <string name="create_new_note">Nieuwe notitie maken</string>
     <string name="add_to_note">Aan notitie toevoegen</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Bestand openen</string>
