--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Notatka ogólna</string>
     <string name="create_new_note">Utwórz nową notatkę</string>
     <string name="add_to_note">Dodaj do notatki</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Otwórz plik</string>
