--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -13,11 +13,12 @@
     <string name="pick_a_note">Selecione uma nota</string>
     <string name="rename_note">Renomear nota</string>
     <string name="general_note">Nota geral</string>
-    <string name="open_file">Abrir arquivo</string>
     <string name="create_new_note">Criar uma nova nota</string>
     <string name="add_to_note">Adicionar à nota</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
+    <string name="open_file">Abrir arquivo</string>
     <string name="export_as_file">Exportar como arquivo</string>
     <string name="file_too_large">Arquivo muito grande, o limite é 10 MB</string>
     <string name="only_import_file_content">Importe apenas o conteúdo do arquivo\n(modificar o arquivo não afetará a nota)</string>
