--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Общая заметка</string>
     <string name="create_new_note">Новая заметка</string>
     <string name="add_to_note">Добавить к заметке</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Открыть файл</string>
