--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">Genel not</string>
     <string name="create_new_note">Yeni not oluştur</string>
     <string name="add_to_note">Nota ekle</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">Dosya aç</string>
