--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -15,6 +15,7 @@
     <string name="general_note">一般笔记</string>
     <string name="create_new_note">创建一个新的笔记</string>
     <string name="add_to_note">添加到笔记</string>
+    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
 
     <!-- File notes -->
     <string name="open_file">打开文件</string>
