--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -18,6 +18,7 @@
     <string name="create_new_note">Crear unha nova nota</string>
     <string name="add_to_note">Engadir a nota</string>
     <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
+    <string name="note_shown_widget">Note shown in the widget:</string>
 
     <!-- File notes -->
     <string name="open_file">Abrir ficheiro</string>
