--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -16,6 +16,7 @@
     <string name="create_new_note">Kurti naują įrašą</string>
     <string name="add_to_note">Papildyti įrašą</string>
     <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
+    <string name="note_shown_widget">Note shown in the widget:</string>
 
     <!-- File notes -->
     <string name="open_file">Atverti failą</string>
