--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -16,6 +16,7 @@
     <string name="create_new_note">Skapa en ny anteckning</string>
     <string name="add_to_note">Lägg till i anteckning</string>
     <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
+    <string name="note_shown_widget">Note shown in the widget:</string>
 
     <!-- File notes -->
     <string name="open_file">Öppna fil</string>
