--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Simple Notes</string>
     <string name="app_launcher_name">Notas</string>
     <string name="widget_config">Obrigado por usar o Simple Notes.\nPara mais aplicações Simple, aceda a SimpleMobileTools.com.</string>
-    <string name="cannot_share_empty_text">Não pode partilhar texto em branco</string>
+    <string name="cannot_share_empty_text">Não pode partilhar texto vazio</string>
     <string name="simple_note">Nota simples</string>
     <string name="new_note">Adicionar uma nota</string>
     <string name="no_title">Por favor dê um nome à sua nota</string>
@@ -15,8 +15,8 @@
     <string name="general_note">Nota genérica</string>
     <string name="create_new_note">Criar uma nota</string>
     <string name="add_to_note">Adicionar a uma nota</string>
-    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
-    <string name="note_shown_widget">Note shown in the widget:</string>
+    <string name="unsaved_changes_warning">Existem alterações não guardadas. O que deseja fazer?</string>
+    <string name="note_shown_widget">Nota mostrada no widget:</string>
 
     <!-- File notes -->
     <string name="open_file">Abrir ficheiro</string>
