--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -15,8 +15,8 @@
     <string name="general_note">一般筆記</string>
     <string name="create_new_note">建立新筆記</string>
     <string name="add_to_note">添加到筆記</string>
-    <string name="unsaved_changes_warning">You have some unsaved changes. What do you want to do with them?</string>
-    <string name="note_shown_widget">Note shown in the widget:</string>
+    <string name="unsaved_changes_warning">你有一些尚未儲存的變更。你想對他們怎麼處理?</string>
+    <string name="note_shown_widget">在小工具顯示的筆記:</string>
 
     <!-- File notes -->
     <string name="open_file">打開檔案</string>
