--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -43,6 +43,7 @@
     <string name="show_note_picker">Rodyti užrašų parinkiklį pajungus programėlę</string>
     <string name="autosave_notes">Automatiškai išsaugoti užrašus</string>
     <string name="enable_line_wrap">naudoti eilutės perkėlimą</string>
+    <string name="enable_personalized_learning">Enable the \"Personalized learning\" function of some keyboards</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Eksportuoti visus užrašus kaip bylas</string>
