--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -43,6 +43,7 @@
     <string name="show_note_picker">Показывать список заметок при запуске</string>
     <string name="autosave_notes">Автосохранение заметок</string>
     <string name="enable_line_wrap">Переносить строки</string>
+    <string name="enable_personalized_learning">Enable the \"Personalized learning\" function of some keyboards</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Экспортировать все заметки в файлы</string>
