--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -43,6 +43,7 @@
     <string name="show_note_picker">Zobraziť zoznam poznámok po spustení</string>
     <string name="autosave_notes">Automaticky ukladať poznámky</string>
     <string name="enable_line_wrap">Povoliť zalamovanie riadkov</string>
+    <string name="enable_personalized_learning">Povoliť funkciu \"Osobné učenie sa\" niektorých klávesníc</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportovať všetky poznámky ako súbory</string>
