--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -43,7 +43,7 @@
     <string name="show_note_picker">Mostrar seletor de notas ao iniciar</string>
     <string name="autosave_notes">Guardar nota automaticamente</string>
     <string name="enable_line_wrap">Ativar quebra de linha</string>
-    <string name="enable_personalized_learning">Enable the \"Personalized learning\" function of some keyboards</string>
+    <string name="use_incognito_mode">Use Incognito Mode of keyboards</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportar todas as notas como ficheiros</string>
