--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -43,7 +43,7 @@
     <string name="show_note_picker">Prikaži odabir bilješke prilikom pokretanja</string>
     <string name="autosave_notes">Automatsko spremanje bilješki</string>
     <string name="enable_line_wrap">Omogući omotavanje linije</string>
-    <string name="use_incognito_mode">Use Incognito Mode of keyboards</string>
+    <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Izvezi sve bilješke kao datoteke</string>
