--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -43,7 +43,7 @@
     <string name="show_note_picker">Mostra un selettore di note all\'avvio</string>
     <string name="autosave_notes">Salva automaticamente le note</string>
     <string name="enable_line_wrap">Abilita a capo automatico</string>
-    <string name="use_incognito_mode">Use Incognito Mode of keyboards</string>
+    <string name="use_incognito_mode">Use Incognito mode of keyboards</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Esporta le note come file</string>
