--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -43,7 +43,7 @@
     <string name="show_note_picker">Zobraziť zoznam poznámok po spustení</string>
     <string name="autosave_notes">Automaticky ukladať poznámky</string>
     <string name="enable_line_wrap">Povoliť zalamovanie riadkov</string>
-    <string name="use_incognito_mode">Použiť inkognito mód klávesníc</string>
+    <string name="use_incognito_mode">Použiť Inkognito mód klávesníc</string>
 
     <!-- Import / Export -->
     <string name="export_all_notes">Exportovať všetky poznámky ako súbory</string>
