--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -27,6 +27,7 @@
     <string name="delete_file_itself">Slet også filen \"%s\"</string>
     <string name="note_saved_successfully">Noten \"%s\" er gemt</string>
     <string name="note_exported_successfully">Noten \"%s\" er eksporteret</string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
 
     <!-- Settings -->
     <string name="display_success_message">Vis en meddelelse når en fil er gemt</string>
