--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -27,6 +27,7 @@
     <string name="delete_file_itself">Taip pat ištrinti failą \"%s\"</string>
     <string name="note_saved_successfully">Įrašas \"%s\" sėkmingai išsaugotas</string>
     <string name="note_exported_successfully">Sėkmingai sukurta įrašo \"%s\ kopija" </string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
 
     <!-- Settings -->
     <string name="display_success_message">Rodyti sėkmingo išsaugojimo pranešimus</string>
