--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -27,6 +27,7 @@
     <string name="delete_file_itself">También borrar el archivo \"%s\"</string>
     <string name="note_saved_successfully">Nota \"%s\" guardada con éxito</string>
     <string name="note_exported_successfully">Nota \"%s\" exportada con éxito</string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
 
     <!-- Settings -->
     <string name="display_success_message">Mostrar mensajes de guardado con éxito</string>
