--- a/app/src/main/res/values-gl/strings.xml
+++ b/app/src/main/res/values-gl/strings.xml
@@ -29,6 +29,7 @@
     <string name="delete_file_itself">Borra tamén ficheiro \"%s\"</string>
     <string name="note_saved_successfully">Nota \"%s\" gardada correctamente</string>
     <string name="note_exported_successfully">Nota \"%s\" exportada correctamente</string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
 
     <!-- Settings -->
     <string name="display_success_message">Mostra mensaxe de gardado correcto</string>
