--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -27,6 +27,7 @@
     <string name="delete_file_itself">也刪除檔案 \"%s\"</string>
     <string name="note_saved_successfully">筆記 \"%s\" 儲存成功</string>
     <string name="note_exported_successfully">筆記 \"%s\" 匯出成功</string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
 
     <!-- Settings -->
     <string name="display_success_message">顯示儲存成功的訊息</string>
