--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="delete_file_itself">Also delete file \"%s\"</string>
     <string name="note_saved_successfully">Note \"%s\" saved successfully</string>
     <string name="note_exported_successfully">Note \"%s\" exported successfully</string>
+    <string name="only_export_file_content">Only export the current file content\n(changing the note will not affect the file)</string>
 
     <!-- Settings -->
     <string name="display_success_message">Display save success messages</string>
